# replica

./: .alias  .gitignore  CMakeLists.txt  README.md  mk  replica.hpp  run  watch
configs/plaza/: config.json  spec.json
include/: config.hpp  replica.hpp  ticker.hpp  utils.hpp
src/: CMakeLists.txt  main.cpp  main.h
src/replica/: CMakeLists.txt  replica.cpp  replica.hpp
test/: CMakeLists.txt  main.cpp  watch
test/data/: config.json
test/src/: replica_tests.cpp
tests/: CMakeLists.txt  main.cpp
